fix(web): fix mention avatar vertical align

--- a/actor-sdk/sdk-web/src/styles/dropdown.scss
+++ b/actor-sdk/sdk-web/src/styles/dropdown.scss
@@ -245,6 +245,7 @@
       .avatar__image,
       .avatar__placeholder {
         margin-right: 10px;
+        vertical-align: middle;
       }
       .title {
         display: inline-block;
